--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.7",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "astro": "^5.7.12",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
