--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "astro": "^5.7.12",
+    "astro-robots-txt": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.3",
