Actualiza el archivo manifest.json para cambiar los colores de fondo y tema a #000033, y agrega nuevos íconos de Android en formato PNG: android-icon-192x192.png y android-icon-512x512.png en el Layout.astro, mejorando la representación visual en dispositivos móviles.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Desarrollador web Full Stack especializado en crear aplicaciones web modernas, responsivas y de alto rendimiento.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#003",
-  "theme_color": "#003",
+  "background_color": "#000033",
+  "theme_color": "#000033",
   "icons": [
     {
       "src": "/favicons/favicon-16x16.png",
@@ -25,6 +25,16 @@
     {
       "src": "/favicons/apple-touch-icon-180x180.png",
       "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicons/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicons/android-icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
