Actualiza la información personal en varios archivos, cambiando "dambdev" por "David Mirás Bellón (dambdev)" en el LICENSE, manifest.json, Hero.astro, y site.js, mejorando la presentación y consistencia del autor en el proyecto.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Porfolio de dambdev",
+  "name": "Porfolio de David Mirás Bellón",
   "short_name": "dambdev",
   "description": "Desarrollador web Full Stack especializado en crear aplicaciones web modernas, responsivas y de alto rendimiento.",
   "start_url": "/",
